--- a/src/test/resources/web/normal/2.html
+++ b/src/test/resources/web/normal/2.html
@@ -24,6 +24,6 @@
     <option value="red">Red</option>
     <option value="darkred">DarkRed</option>
 </select>
-
+<a href="3.html">Go to page 3</a>
 </body>
 </html>
