--- a/src/main/resources/html/index.html
+++ b/src/main/resources/html/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
     <title>JViff report</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"/>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"/>
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css"/>
+    <script src="static/jquery.js"/>
+    <script src="static/bootstrap/js/bootstrap.min.js"/>
 </head>
 
 <body>
